# cartridge_braintree

./: .gitignore  CHANGES.rst  CREDITS.rst  LICENSE  MANIFEST.in  README.md  README.rst  project.toml  pyproject.toml  setup.cfg  setup.py
cartridge_braintree/: braintree_payment.py  countries.py  defaults.py  forms.py  urls.py  utils.py
cartridge_braintree/locale/ar/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/cs/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/de/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/el/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/en/LC_MESSAGES/: django.po
cartridge_braintree/locale/eo/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/es/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/et/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/fa/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/fi/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/fr/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/hr/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/it/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/ja/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/nb/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/nl/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/pl/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/pt_BR/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/pt_PT/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/ru/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/sk/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/locale/sv/LC_MESSAGES/: django.mo  django.po
cartridge_braintree/templates/shop/: checkout.html  complete.html  payment.html
cartridge_braintree/templatetags/: checkout_tags.py
(+14 files in other folders)
