[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cartridge_braintree"
version = "3.0.5"
description = "Braintree Payments processing for Mezzanine/Cartridge"
readme = "README.rst"
authors = [{ name = "Henri Hulski", email = "henri@yacoma.it" }]
license = { text = "BSD" }
requires-python = ">=3.7"
dependencies = [
    "braintree",
    "cartridge >= 1.3",
    "django >= 3.2.4, < 4.1",
    "mezzanine >= 5.1",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["django", "mezzanine", "cartridge", "payment"]

[project.urls]
repository = "https://github.com/henri-hulski/cartridge_braintree"

[project.optional-dependencies]
codestyle = [
    "flake8 >= 3",
    "black",
    "isort >= 5",
    "pyupgrade >= 2",
]
countries_utf8_sorting = ["pyuca"]

[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.tox
    | \.venv
    | __pypackages__
    | build
    | dist
    | env
    | venv
  )/
)
'''
